syntax = "proto3";

package comment.v1;

option go_package = "comment/v1;commentv1";

import "google/protobuf/timestamp.proto";

message CommentListRequest {
  // 按照资源来排序
  string biz = 1;
  int64 biz_id = 2;

  // 分页接口，按照最新评论排序（id 降序/create_time 降序）
  // 上一批次最小 ID
  int64 min_id = 3;
  int64 limit = 4;
}

message CommentListResponse {
  repeated Comment comments = 1;
}

message DeleteCommentRequest {
  int64 id = 1;
}

message DeleteCommentResponse {
}

message CreateCommentRequest {
  Comment comment = 1;
}

message CreateCommentResponse {
}

message GetMoreRepliesRequest {
  int64 rid = 1;
  int64 max_id = 2;
  int64 limit = 3;
}
message GetMoreRepliesResponse {
  repeated Comment replies = 1;
}

message Comment {
  int64 id = 1;
  int64 uid = 2;
  string biz = 3;
  int64 biz_id = 4;
  string content = 5;
  Comment root_comment = 6;
  Comment parent_comment = 7;
  // 如果不想用 int64 之类的就可以考虑使用这个 Timestamp
  google.protobuf.Timestamp create_time = 9;
  google.protobuf.Timestamp update_time = 10;
}

service CommentService {
  // GetCommentList Comment的id为0 获取一级评论
  rpc GetCommentList (CommentListRequest) returns (CommentListResponse);

  // DeleteComment 删除评论 删除本评论及其子评论
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse);

  // CreateComment 创建评论
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse);

  // GetMoreReplies 获得回复
  rpc GetMoreReplies(GetMoreRepliesRequest) returns (GetMoreRepliesResponse);
}